[gd_scene load_steps=26 format=2]

[ext_resource path="res://registration.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Leto Text Sans Defect.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/lineEditFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=4]

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=26]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.980392, 0.780392, 0.780392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.964706, 0.882353, 0.882353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.964706, 0.882353, 0.882353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=28]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=20]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.980392, 0.780392, 0.780392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.937255, 0.866667, 0.866667, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.964706, 0.882353, 0.882353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.541176, 0.52549, 0.52549, 1 )

[sub_resource type="DynamicFont" id=21]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.980392, 0.960784, 0.960784, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.309804, 0.286275, 0.286275, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 20.0

[sub_resource type="Theme" id=13]
default_font = ExtResource( 3 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/fonts/font = SubResource( 20 )
Button/styles/disabled = SubResource( 18 )
Button/styles/focus = SubResource( 19 )
Button/styles/hover = SubResource( 23 )
Button/styles/normal = SubResource( 22 )
Button/styles/pressed = SubResource( 24 )
Label/colors/font_color = Color( 0, 0, 0, 1 )
Label/fonts/font = SubResource( 21 )
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = ExtResource( 3 )
WindowDialog/styles/panel = SubResource( 14 )

[sub_resource type="Animation" id=29]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBox/infoLabel:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25 ]
}

[sub_resource type="Animation" id=27]
resource_name = "def"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBox/infoLabel:custom_fonts/font:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 25, 30, 25 ]
}

[node name="reg" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -397, -146 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="_" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_top = 50.0
margin_right = -20.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="_"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBox"]
margin_right = 400.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Регистрация"
align = 1
valign = 2

[node name="Login" type="LineEdit" parent="VBox"]
margin_left = 50.0
margin_top = 54.0
margin_right = 350.0
margin_bottom = 104.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
custom_colors/font_color = Color( 0.141176, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 3 )
placeholder_text = "логин"

[node name="Password" type="LineEdit" parent="VBox"]
margin_left = 50.0
margin_top = 108.0
margin_right = 350.0
margin_bottom = 158.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
theme = SubResource( 4 )
custom_colors/font_color_selected = Color( 0.141176, 0.12549, 0.12549, 1 )
custom_colors/font_color = Color( 0.141176, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true
placeholder_text = "пароль"
__meta__ = {
"_editor_description_": "ТЕСТтест
"
}

[node name="Password2" type="LineEdit" parent="VBox"]
margin_left = 50.0
margin_top = 162.0
margin_right = 350.0
margin_bottom = 212.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
size_flags_vertical = 0
size_flags_stretch_ratio = 20.0
theme = SubResource( 4 )
custom_colors/font_color_selected = Color( 0.141176, 0.12549, 0.12549, 1 )
custom_colors/font_color = Color( 0.141176, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
secret = true
placeholder_text = "повторите пароль"
__meta__ = {
"_editor_description_": "ТЕСТтест
"
}

[node name="Button" type="Button" parent="VBox"]
visible = false
margin_left = 50.0
margin_top = 216.0
margin_right = 350.0
margin_bottom = 266.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 6
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 26 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "загрузить картинку"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoLabel" type="Label" parent="VBox"]
margin_top = 216.0
margin_right = 400.0
margin_bottom = 266.0
rect_min_size = Vector2( 400, 50 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 28 )
text = "info"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acceptButton" type="Button" parent="VBox"]
margin_left = 125.0
margin_top = 383.0
margin_right = 275.0
margin_bottom = 433.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 4
size_flags_vertical = 10
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Подтвердить"

[node name="backButton" type="Button" parent="VBox"]
margin_left = 125.0
margin_top = 437.0
margin_right = 275.0
margin_bottom = 487.0
rect_min_size = Vector2( 150, 50 )
size_flags_horizontal = 4
size_flags_vertical = 2
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Назад"

[node name="Center" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="Center"]
margin_left = 285.0
margin_top = 224.0
margin_right = 739.0
margin_bottom = 375.0
theme = SubResource( 13 )
popup_exclusive = true
window_title = ""
dialog_text = "Вы успешно зарегестрировались!
Нажмите ОК, чтобы вернуться к 
окну авторизации."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 6.0
anims/RESET = SubResource( 29 )
anims/def = SubResource( 27 )

[connection signal="pressed" from="VBox/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBox/acceptButton" to="." method="_on_acceptButton_pressed"]
[connection signal="pressed" from="VBox/backButton" to="." method="_on_backButton_pressed"]
[connection signal="confirmed" from="Center/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
